--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -11,9 +11,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
-      # - run: npm ci
-      # - run: npm test
+          node-version: 18
+      - run: npm ci
+      - run: npm test
 
   publish-gpr:
     needs: build
@@ -27,7 +27,7 @@ jobs:
         with:
           node-version: 18
           registry-url: https://npm.pkg.github.com/
-      # - run: npm ci
+      - run: npm ci
       - run: npm run build
       - run: npm publish
         env:
