--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "build": "vite build && tsc",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "path": "^0.12.7"
+  },
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "react": "^18.2.0",
     "styled-components": "^6.1.0",
